devops-tools/netshoot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-netshoot-dep
  namespace: devops-tools
  labels:
    app: nginx-netshoot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-netshoot
  template:
    metadata:
      labels:
        app: nginx-netshoot
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
        - name: netshoot
          image: nicolaka/netshoot
          command: ["/bin/bash"]
          args: ["-c", "while true; do curl -s -o /dev/null -I -w \"%{http_code}\n\" jenkins-svc; sleep 3;done"]
