devops-tools/jenkins-service..yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
  namespace: devops-tools
spec:
  type: NodePort
  selector:
    app: jenkins-server
  ports:
  - name: httpport 
    port: 8080
    targetPort: 8080
