devops-tools/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress-no-jenkins-srv
spec:
  rules:
  - host: jenkins.matnia.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jenkins-svc
            port:
              number: 8080
